[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "cucumber-test-release-automation"
version = "0.0.1"
description = ""
authors = [
  {name = "Matt Wynne", email = "matt@cucumber.io"}
]
readme = {file = "README.md", content-type = "text/markdown"}
